# coreclr

src/coreclr/hosts/qbattlecommon/: CMakeLists.txt  qbattlecommon.cpp  qbattlecommon.h
src/coreclr/hosts/qbattlelib/: CMakeLists.txt  qbattle.py  qbattlelib.cpp
src/coreclr/hosts/qbattlerun/: CMakeLists.txt  qbattlerun.cpp
